kubernetes/apps/default/external-services/app/minio.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/core.v1.json
apiVersion: v1
kind: Service
metadata:
  name: &app minio-proxy
  labels:
    app.kubernetes.io/name: *app
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - protocol: TCP
      port: 9002
      targetPort: 9002
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/core.v1.json
apiVersion: v1
kind: Endpoints
metadata:
  name: &app minio-proxy
  labels:
    app.kubernetes.io/name: *app
    kubernetes.io/service-name: *app
subsets:
  - addresses:
      - "10.10.100.30"
    ports:
      - name: https
        protocol: TCP
        port: 9002
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app minio-proxy
  labels:
    app.kubernetes.io/name: *app
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  hostnames: ["minio.${PUBLIC_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: *app
          port: 9002
