kubernetes/apps/default/external-services/app/proxmox-pve-node2.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app proxmox-pve-node2-proxy
  labels:
    app.kubernetes.io/name: *app
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - protocol: TCP
      port: 8006
      targetPort: 8006
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/discovery.k8s.io/endpointslice_v1.json
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: &app proxmox-pve-node2-proxy
  namespace: default
  labels:
    app.kubernetes.io/name: *app
    kubernetes.io/service-name: *app
addressType: IPv4
ports:
  - name: https
    protocol: TCP
    port: 8006
endpoints:
  - addresses: ["10.10.100.12"]
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app proxmox-pve-node2-proxy
  namespace: default
spec:
  hostnames: ["pve-node2.${PUBLIC_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: *app
          port: 8006
