kubernetes/apps/default/external-services/app/proxmox-pve-node3.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app proxmox-pve-node3-proxy
  labels:
    app.kubernetes.io/name: *app
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - protocol: TCP
      port: 8006
      targetPort: 8006
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: &app proxmox-pve-node3-proxy
  labels:
    app.kubernetes.io/name: *app
    kubernetes.io/service-name: *app
addressType: IPv4
ports:
  - name: https
    appProtocol: https
    protocol: TCP
    port: 8006
endpoints:
  - addresses:
      - "10.10.100.13"
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app proxmox-pve-node3-proxy
  labels:
    app.kubernetes.io/name: *app
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  hostnames: ["pve-node3.${PUBLIC_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: *app
          port: 8086
