kubernetes/apps/default/external-services/app/truenas.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/core.v1.json
apiVersion: v1
kind: Service
metadata:
  name: &app truenas-proxy
  namespace: default
  labels:
    app.kubernetes.io/name: *app
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: https
      port: 443
      targetPort: 443
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/discovery.k8s.io/endpointslice_v1.json
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: &app truenas-proxy
  namespace: default
  labels:
    kubernetes.io/name: *app
    kubernetes.io/service-name: *app
addressType: IPv4
ports:
  - name: https
    protocol: TCP
    port: 443
endpoints:
  - addresses: ["10.10.100.30"]
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/tlsroute_v1alpha3.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: truenas-proxy
  namespace: default
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames: ["truenas.${PUBLIC_DOMAIN}"]
  rules:
    - backendRefs:
        - name: truenas-proxy
          port: 443
